--- a/index.html
+++ b/index.html
@@ -2,24 +2,61 @@
 <html lang="en">
 
 <head>
-    <!-- Meta tags -->
+    <!-- Normal Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google verification META Tag -->
+    <meta name="google-site-verification" content="UjL0Qs62yzNFCG17KJAf5P0q0smmCjk2oqUdL0BJw1s" />
+
+    <!-- Primary Meta Tags -->
+    <title>HILLZ - Premium Luxury Bakery | Exquisite Cakes & Artisanal Treats</title>
+    <meta name="title" content="HILLZ - Premium Luxury Bakery | Exquisite Cakes & Artisanal Treats">
     <meta name="description"
         content="HILLZ Premium Bakery in Enugu offers exquisite custom cakes, authentic Nigerian chin chin, and artisanal pastries. Order now for fast delivery and luxury baked goods.">
     <meta name="keywords"
         content="HILLZ bakery, premium bakery Enugu, custom cakes, wedding cakes, birthday cakes, chin chin, Nigerian chin chin, artisan pastries, Enugu delivery, luxury baked goods">
+    <meta name="author" content="HILLZ Bakery">
+    <meta name="robots" content="index, follow">
 
-    <!-- Page Title -->
-    <title>HILLZ - Premium Luxury Bakery | Exquisite Cakes & Artisanal Treats</title>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dikachu.github.io/hillz-bakery/">
+    <meta property="og:title" content="HILLZ - Premium Luxury Bakery | Exquisite Cakes & Artisanal Treats">
+    <meta property="og:description"
+        content="HILLZ Premium Bakery in Enugu offers exquisite custom cakes, authentic Nigerian chin chin, and artisanal pastries. Order now for fast delivery and luxury baked goods.">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1622467827417-bbe2237067a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvb2tpZXN8ZW58MHx8MHx8fDA%3D">
+    <meta property="og:site_name" content="HILLZ Bakery">
+    <meta property="og:locale" content="en_US">
 
-    <!-- Font Awesome -->
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dikachu.github.io/hillz-bakery/">
+    <meta property="twitter:title" content="HILLZ - Premium Luxury Bakery | Exquisite Cakes & Artisanal Treats">
+    <meta property="twitter:description"
+        content="HILLZ Premium Bakery in Enugu offers exquisite custom cakes, authentic Nigerian chin chin, and artisanal pastries. Order now for fast delivery and luxury baked goods.">
+    <meta property="twitter:image" content="https://images.unsplash.com/photo-1622467827417-bbe2237067a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvb2tpZXN8ZW58MHx8MHx8fDA%3D">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://dikachu.github.io/hillz-bakery/">
+
+    <!-- Resource Hints for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="dns-prefetch" href="//images.unsplash.com">
+    <link rel="dns-prefetch" href="//plus.unsplash.com">
+
+    <!-- Font Awesome with integrity and crossorigin -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- FavIcon -->
+    <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <!-- Custom Css -->
+    <!-- Google Fonts with display=swap for performance -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Georgia:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Custom CSS - Loaded after critical CSS -->
     <style>
         * {
             margin: 0;
@@ -913,6 +950,120 @@
             }
         }
     </style>
+
+    <!-- Structured Data / JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "HILLZ Premium Bakery",
+        "description": "HILLZ Premium Bakery in Enugu offers exquisite custom cakes, authentic Nigerian chin chin, and artisanal pastries. Order now for fast delivery and luxury baked goods.",
+        "url": "https://dikachu.github.io/hillz-bakery/",
+        "logo": "https://dikachu.github.io/hillz-bakery/favicon.ico",
+        "image": "https://images.unsplash.com/photo-1622467827417-bbe2237067a9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvb2tpZXN8ZW58MHx8MHx8fDA%3D",
+        "telephone": "+2348134567890",
+        "email": "orders@hillzbakery.com",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "123 Aba Road",
+            "addressLocality": "Enugu",
+            "addressRegion": "Enugu State",
+            "postalCode": "400001",
+            "addressCountry": "NG"
+        },
+        "openingHours": "Mo-Sa 07:00-20:00, Su 09:00-18:00",
+        "priceRange": "₦500 - ₦50,000",
+        "currenciesAccepted": "NGN",
+        "paymentAccepted": "Cash, Bank Transfer",
+        "areaServed": "Nigeria",
+        "serviceType": [
+            "Custom Cakes",
+            "Wedding Cakes",
+            "Birthday Cakes",
+            "Chin Chin",
+            "Artisan Pastries",
+            "Event Catering",
+            "Gift Packaging"
+        ],
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Bakery Products",
+            "itemListElement": [
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Custom Wedding Cake",
+                        "description": "Elegant multi-tier cakes designed for weddings.",
+                        "price": "50000",
+                        "priceCurrency": "NGN"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Premium Chin Chin",
+                        "description": "Authentic Nigerian chin chin made with premium ingredients.",
+                        "price": "2500",
+                        "priceCurrency": "NGN"
+                    }
+                },
+                {
+                    "@type": "Offer",
+                    "itemOffered": {
+                        "@type": "Product",
+                        "name": "Artisan Pastries",
+                        "description": "Handcrafted pastries, croissants, and baked goods.",
+                        "price": "500",
+                        "priceCurrency": "NGN"
+                    }
+                }
+            ]
+        },
+        "review": [
+            {
+                "@type": "Review",
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "author": {
+                    "@type": "Person",
+                    "name": "Adaeze Okafor"
+                },
+                "reviewBody": "HILLZ created the most stunning wedding cake for our special day. Every detail was perfect, and our guests couldn't stop talking about how delicious it was. Truly a masterpiece!"
+            },
+            {
+                "@type": "Review",
+                "reviewRating": {
+                    "@type": "Rating",
+                    "ratingValue": "5",
+                    "bestRating": "5"
+                },
+                "author": {
+                    "@type": "Person",
+                    "name": "Chinedu Abia"
+                },
+                "reviewBody": "The chin chin from HILLZ is simply the best I've ever tasted. The quality is exceptional and the packaging is so elegant. Perfect for gifts and personal enjoyment."
+            }
+        ],
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5.0",
+            "reviewCount": "200",
+            "bestRating": "5",
+            "worstRating": "1"
+        },
+        "sameAs": [
+            "https://facebook.com/hillzbakery",
+            "https://instagram.com/hillzbakery",
+            "https://twitter.com/hillzbakery",
+            "https://wa.me/2348134567890"
+        ]
+    }
+    </script>
 </head>
 
 <body>
